# job_parser_v_2.0

./: .gitignore  README.md  pyproject.toml  queries.sql  run.py
data/: abc_api.py  config.py  constants.py  database.ini  headhunter.py  json_saver.py  print_table.py  run.py  superjob.py  utils.py  vacancies.json  vacancy.py
src/: __init__.py  dbmanager.py  headhunter.py  json_saver.py  superjob.py  vacancy.py
src/abc_classes/: __init__.py  abc_api.py
src/functions/: __init__.py  print_table.py  utils.py
