[tool.poetry]
name = "job-parser"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
prettytable = "^3.8.0"
requests = "^2.31.0"
psycopg2 = "^2.9.6"

[tool.poetry.scripts]
my_app = 'mypackage.my_module:my_method'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
